fixed portrait margin on mobile

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -21,7 +21,10 @@
     .identity {
       float:        left;
       height:       2.9rem;
-      margin:       .3rem .3rem .3rem 0;
+      margin:       .3rem;
+      @media screen and (min-width: $min-line-length) {
+        margin: .3rem .3rem .3rem 0;
+      }
       &:hover {
         a {
           background: white;
